made table consistent in format

--- a/Eric MAGC1.ipynb
+++ b/Eric MAGC1.ipynb
@@ -50,11 +50,11 @@
     "## Variables and Parameters\n",
     "| Description | Symbol | Units | Dimensions | Type |\n",
     "| --- | ---| --- | --- | --- |\n",
-    "| concentration of $CO_2$ | C | ppm | 1 | dependent variable |\n",
-    "| concentration of $CH_4$ | M | ppm | 1 | dependent variable |\n",
-    "| concentration of $N_2 O$ | N | ppm | 1 | dependent variable |\n",
-    "| concentration of $H_2 O$ | W | ppm | 1 | dependent variable |\n",
-    "| time | t | years | T | independent variable |\n",
+    "| concentration of $CO_2$ | $C$ | $\\text{ppm}$ | $1$ | dependent variable |\n",
+    "| concentration of $CH_4$ | $M$ | $\\text{ppm}$ | $1$ | dependent variable |\n",
+    "| concentration of $N_2 O$ | $N$ | $\\text{ppm}$ | $1$ | dependent variable |\n",
+    "| concentration of $H_2 O$ | $W$ | $\\text{ppm}$ | $1$ | dependent variable |\n",
+    "| time | $t$ | $\\text{years}$ | $T$ | independent variable |\n",
     "| volcanic source rates of $CO_2, H_2 O$ | $V_c, V_w$ | $\\frac{\\text{ppm}}{\\text{years}}$ | $\\frac{1}{T}$ | parameter |\n",
     "| wetland source rates of $CO_2, CH_4, N_2 O$ | $W_c, W_m, W_n$ | $\\frac{\\text{ppm}}{\\text{years}}$ | $\\frac{1}{T}$ | parameter |\n",
     "| net evaporation source rate of $H_2 O$ | $E_w$ | $\\frac{\\text{ppm}}{\\text{years}}$ | $\\frac{1}{T}$ | parameter |\n",
@@ -62,7 +62,7 @@
     "| ocean absorption rate for $CO_2, N_2 O$ | $O_c, O_n$ | $\\frac{1}{\\text{years}}$ | $\\frac{1}{T}$ | parameter |\n",
     "| plant uptake rate for $CO_2$ | $P_c$ | $\\frac{1}{\\text{years}}$ | $\\frac{1}{T}$ | parameter |\n",
     "| precipitation removal rate of $H_2 O$ | $R_w$ | $\\frac{1}{\\text{years}}$ | $\\frac{1}{T}$ | parameter |\n",
-    "| initial concentration of $CO_2, CH_4, N_2 O, H_2 O$ | $C_0, M_0, N_0, W_0$ | ppm | 1 | constant |"
+    "| initial concentration of $CO_2, CH_4, N_2 O, H_2 O$ | $C_0, M_0, N_0, W_0$ | $\\text{ppm}$ | $1$ | constant |"
    ]
   },
   {
